2007-10-01  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (EXTRA_DIST): Added drops patches for config.guess.

2007-10-01  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (EXTRA_DIST): Added missing '\'.

2007-09-30  Dalibor Topic  <robilad@kaffe.org>

	* ChangeLog: Moved old entries into ...
	* ChangeLog.19: New file.
	* Makefile.am (EXTRA_DIST): Added ChangeLog.19.

2007-09-30  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.
	* configure.ac, README, RELEASE-NOTES: Updated to 1.1.9-pre.

2007-09-30  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (EXTRA_DIST): Added FAQ/FAQ.arm,
	FAQ/FAQ.drops, FAQ.freebsd, FAQ.platform-status.

2007-09-29  Dalibor Topic  <robilad@kaffe.org>

	* config/Makefile.am (EXTRA_DIST): 
	Added arm/linux/jit3-md.h, bfin/uclinux/sigcontextinfo.h,
	i386/drops/config.frag, i386/drops/jit3-md.h, 
	i386/drops/jit-md.h, i386/drops/md.c,
	i386/drops/md.h, i386/interix6/config.frag,
	i386/interix6/jit-md.h, i386/interix6/md.c,
	i386/interix6/md.h, powerpc/callKaffeException.h: 
	Added missing files.

2007-09-27  Dalibor Topic  <robilad@kaffe.org>

	* FAQ/FAQ.win32: Updated information how to build Kaffe
	on Cygwin.

2007-09-27  Dalibor Topic  <robilad@kaffe.org>

	* FAQ/FAQ.win32: Added information how to build GNU Classpth
	from CVS head.

2007-09-23  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c (finishGC)
	(KaffeGC_WalkMemory): Use NULL instead of 0 where appropriate.

2007-09-23  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-refs.c (KaffeGC_addRef, KaffeGC_rmRef,
	KaffeGC_addWeakRef, KaffeGC_rmWeakRef, KaffeGC_clearWeakRef): 
	Added debugging statements.

2007-09-23  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/reference.c (KaffeVM_setFinalizer):
	Added debugging statements.

2007-09-23  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/code.c (addLineNumbers): Fixed formatting string
	warnings on x86_64-linux.

2007-09-22  Dalibor Topic  <robilad@kaffe.org>
