@@ -186,8 +186,7 @@ include_HEADERS = \
 	jni_md.h \
 	jni_cpp.h \
 	jvmpi.h \
-	kaffe_jni.h \
-	$(JAWT_HDRS)
+	kaffe_jni.h
 
 nodist_pkginclude_HEADERS = \
 	$(INSTALL_DERIVED_HDRS) \
